sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:8: error: not found: value a
      if (!plusPetit(i,i+1)) {echange(i,i+1);b=1;a=1}
                                                 ^